snapshots/syntax/library/statements/name/name_at_module_level.snap
---
source: src/syntax/library/statements/name.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: NameStatement
      children:
        - kind: NameKeyword
          text: Name
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"old.txt\""
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"new.txt\""
