snapshots/syntax/library/statements/name/name_move_file.snap
---
source: src/syntax/library/statements/file_operations/name.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: NameStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: NameKeyword
                  text: Name
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C:\\Temp\\Test.dat\""
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C:\\Data\\Test.dat\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
